--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "web3": "^1.7.0",
+    "web3-eth-contract": "^1.7.0",
+    "web3-utils": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.16",
