--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "next": "12.0.10",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.16",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
