--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.7",
     "web3": "^1.7.0",
     "web3-eth-contract": "^1.7.0",
